--- a/style.css
+++ b/style.css
@@ -770,7 +770,7 @@ footer {
 }
 
 
-.image-text-button {
+.image-text-button-pas {
     background-image: url('./Images/PAS-BG.jpg');
     background-position: 100% 50%;
     background-size: cover;
@@ -781,7 +781,7 @@ footer {
 }
 
 @media (max-width: 768px) {
-    .image-text-button {
+    .image-text-button-pas {
         background-image: url('./Images/PAS-BG.jpg');
         background-position: 25% 25%;
         background-size: cover;
@@ -789,6 +789,50 @@ footer {
         background-attachment: fixed;
         padding: 50px 0 50px 0;
         margin-bottom: 50px;
+    }
+}
+
+.image-text-button-stv {
+    background-image: url('./Images/HOMEPAGE/STV-BG.jpg');
+    background-position: 100% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    padding: 125px 0 125px 0;
+    margin-bottom: 75px;
+}
+
+@media (max-width: 768px) {
+    .image-text-button-stv {
+        background-image: url('./Images/HOMEPAGE/STV-BG.jpg');
+        background-position: 100% 50%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        padding: 50px 0 50px 0;
+        margin-bottom: 75px;
+    }
+}
+
+.image-text-button-cslr {
+    background-image: url('./Images/HOMEPAGE/CSLR-BG.jpg');
+    background-position: 100% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    padding: 125px 0 125px 0;
+    margin-bottom: 75px;
+}
+
+@media (max-width: 768px) {
+    .image-text-button-cslr {
+        background-image: url('./Images/HOMEPAGE/CSLR-BG.jpg');
+        background-position: 50% 50%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        padding: 50px 0 50px 0;
+        margin-bottom: 75px;
     }
 }
 
