--- a/style.css
+++ b/style.css
@@ -707,6 +707,8 @@ footer {
     .case-study {
         display: flex;
         gap: 100px;
+        width: 100%;
+        margin: 100px;
     }
 }
 
@@ -714,6 +716,7 @@ footer {
     .case-study {
         display: flex;
         gap: 120px;
+        justify-content: center;
     }
 }
 
@@ -1108,10 +1111,9 @@ footer {
         top: 100px;
         height: 100%;
         background-color: transparent;
-        padding-right: 100px;
-        margin-left: 60px;
+        padding-right: 60px;
         border-right: 1px solid #000000;
-        width: auto;
+        width: 400px;
     }
 }
 
