--- a/style.css
+++ b/style.css
@@ -147,9 +147,19 @@ h2 {
     height: auto;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 400px) {
     h2 {
-        font-size: 40px;
+        font-size: 36px;
+        font-family: "Kumbh Sans", sans-serif;
+        font-weight: 900;
+        line-height: 48px;
+        height: auto;
+    }
+}
+
+@media (min-width: 401px) and (max-width: 768px) {
+    h2 {
+        font-size: 42px;
         font-family: "Kumbh Sans", sans-serif;
         font-weight: 900;
         line-height: 48px;
@@ -501,10 +511,19 @@ h6 {
     max-width: 750px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 400px) {
     .project-name {
         color: #ffffff;
-        max-width: 500px;
+        max-width: auto;
+        padding-bottom: 0;
+    }
+}
+
+
+@media (min-width: 401px) and (max-width: 768px) {
+    .project-name {
+        color: #ffffff;
+        max-width: auto;
         padding-bottom: 0;
     }
 }
